--- a/Task 8-decision tree/wangjiaux_code.ipynb
+++ b/Task 8-decision tree/wangjiaux_code.ipynb
@@ -1389,7 +1389,7 @@
     "        return classList[0]\n",
     "    # 停止划分条件之二：使用完了所有特征，仍然不能将数据划分成仅包含唯一类别的分组\n",
     "    # 则使用majorityCnt函数挑选次数出现最多的类别作为返回值\n",
-    "    if len(dataSet.values[0]) =1:\n",
+    "    if len(dataSet.values[0]) ==1:\n",
     "        return majorityCnt(classList)  # 挑选次数出现最多的类别作为返回值\n",
     "    bestFeat = chooseBestFeatureToSplit(dataSet, labels)    # 选择最优特征\n",
     "    bestFeatLabel = labels[bestFeat]    # 得到最好的特征标签\n",
